--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         }
 
         .center-logo {
-            width: 100px;
+            width: 90px;
             /* ปรับขนาดโลโก้ */
             height: auto;
             margin-right: 10px;
@@ -189,7 +189,7 @@
 
         .header-text {
             text-align: center;
-            font-size: 2rem;
+            font-size: 1.7rem;
         }
     </style>
 </head>
@@ -199,7 +199,7 @@
         <!-- Header -->
         <div class="chat-header">
             <img src="image/feed.jpg" alt="Logo" class="center-logo">
-            <div class="header-text">AI Chat VDM Pro2</div>
+            <div class="header-text">AI VDM Pro2</div>
         </div>
 
         <!-- Chat Log -->
