--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             width: 90px;
             /* ปรับขนาดโลโก้ */
             height: auto;
-            margin-right: 10px;
+            margin-center: 10px;
             /* ขยับโลโก้ไปทางขวา */
             margin-bottom: 5px;
             /* ระยะห่างโลโก้กับข้อความ */
@@ -199,7 +199,7 @@
         <!-- Header -->
         <div class="chat-header">
             <img src="image/feed.jpg" alt="Logo" class="center-logo">
-            <div class="header-text">AI VDM Pro2</div>
+            <div class="header-text">VDM Genie</div>
         </div>
 
         <!-- Chat Log -->
