--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
         }
 
         .center-logo {
-            width: 90px;
+              width: 100px;
             /* ปรับขนาดโลโก้ */
             height: auto;
-            margin-center: 10px;
+            margin-right: 20px;
             /* ขยับโลโก้ไปทางขวา */
             margin-bottom: 5px;
             /* ระยะห่างโลโก้กับข้อความ */
