--- a/index.html
+++ b/index.html
@@ -198,8 +198,9 @@
     <div class="chat-container">
         <!-- Header -->
         <div class="chat-header">
-            <img src="image/feed.jpg" alt="Logo" class="center-logo">
-            <div class="header-text">VDM Genie</div>
+             <!-- <img src="image/feed.jpg" alt="Logo" class="center-logo">-->
+            <div class="header-text">VDM Genie Pro2</div>
+            
         </div>
 
         <!-- Chat Log -->
