--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
     let message = userInput.value.trim();
 
     // ตรวจจับข้อความว่ามีเฉพาะภาษาอังกฤษหรือไม่
-    const englishRegex = /^[a-zA-Z0-9\s.,?!'"()-]+$/;
+    const englishRegex = /^[a-zA-Z0-9\s.,?!'’‘"“”\u2018\u2019\u201C\u201D\u00A0:;(){}[\]<>+*=/@#&%$^_|~-]+$/;
 
     if (message !== "") {
         // เพิ่มข้อความผู้ใช้ในแชท
