--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
     let message = userInput.value.trim();
 
     // ตรวจจับข้อความว่ามีเฉพาะภาษาอังกฤษหรือไม่
-    const englishRegex = /^[a-zA-Z0-9\s.,?!'’‘"“”\u2018\u2019\u201C\u201D\u00A0:;(){}[\]<>+*=/@#&%$^_|~-]+$/;
+    const englishRegex = /^[a-zA-Z0-9\s.,?!'’‘"“”\u2018\u2019\u201C\u201D\u00A0:;(){}[\]<>+*=/@#&%$^_|~-\u1F600-\u1F64F\u1F300-\u1F5FF\u1F680-\u1F6FF\u2600-\u26FF\u2700-\u27BF]+$/;
 
     if (message !== "") {
         // เพิ่มข้อความผู้ใช้ในแชท
