--- a/index.html
+++ b/index.html
@@ -296,6 +296,70 @@
             return cleanText(text).split(" "); // ตัดคำแยกเป็น Array
         }
 
+ async function loadDictionary() {
+            const response = await fetch("https://raw.githubusercontent.com/dwyl/english-words/master/words_alpha.txt");
+            const text = await response.text();
+            return text.split("\n"); // แปลงคำศัพท์เป็น array
+        }
+
+        // ฟังก์ชันแก้ไขคำสะกด
+        async function correctSpelling(input) {
+            const dictionary = await loadDictionary(); // โหลดคำศัพท์จากไฟล์ออนไลน์
+
+            // ฟังก์ชันคำนวณ Levenshtein Distance
+            function levenshteinDistance(a, b) {
+                const matrix = [];
+                for (let i = 0; i <= b.length; i++) {
+                    matrix[i] = [i];
+                }
+                for (let j = 0; j <= a.length; j++) {
+                    matrix[0][j] = j;
+                }
+                for (let i = 1; i <= b.length; i++) {
+                    for (let j = 1; j <= a.length; j++) {
+                        if (b.charAt(i - 1) === a.charAt(j - 1)) {
+                            matrix[i][j] = matrix[i - 1][j - 1];
+                        } else {
+                            matrix[i][j] = Math.min(
+                                matrix[i - 1][j - 1] + 1, // เปลี่ยนตัวอักษร
+                                Math.min(
+                                    matrix[i][j - 1] + 1, // ลบ
+                                    matrix[i - 1][j] + 1 // เพิ่ม
+                                )
+                            );
+                        }
+                    }
+                }
+                return matrix[b.length][a.length];
+            }
+
+            // ฟังก์ชันหา closest match
+            function findClosestWord(word, dictionary) {
+                let closestWord = word;
+                let lowestDistance = Infinity;
+
+                for (const dictWord of dictionary) {
+                    const distance = levenshteinDistance(word.toLowerCase(), dictWord.toLowerCase());
+                    if (distance < lowestDistance) {
+                        lowestDistance = distance;
+                        closestWord = dictWord;
+                    }
+                }
+                return closestWord;
+            }
+
+            // แยกคำใน input และแก้ไขทีละคำ
+            const words = input.split(" ");
+            const correctedWords = words.map(word => findClosestWord(word, dictionary));
+            return correctedWords.join(" ");
+        }
+
+        // ใช้ฟังก์ชัน
+        (async () => {
+            const userInput = "helo we have probem";
+            const correctedInput = await correctSpelling(userInput);
+            console.log(correctedInput); // Output: "hello we have problem"
+        })();
 
         function findClosestMatch(userInput, data) {
             let closestMatch = null;
